--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@coral-xyz/anchor": "^0.30.1",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.98.0",
-    "bignumber.js": "^9.1.2"
+    "bignumber.js": "^9.1.2",
+    "inquirer": "^12.3.2"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
