--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.98.0",
     "bignumber.js": "^9.1.2",
+    "dotenv": "^16.4.7",
     "inquirer": "^12.3.2"
   },
   "devDependencies": {
